# catch_stock_news

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  catch-stock-news.service  install-service.sh  pyproject.toml  requirements.txt  run.sh  uninstall-service.sh
catch_stock_news/: __init__.py  config.py  database.py  logging_setup.py  models.py  notifier.py  scheduler.py  scraper.py
catch_stock_news/services/: news_checker.py
catch_stock_news/web/: __init__.py  routes.py
catch_stock_news/web/templates/: index.html
tests/: conftest.py  test_config.py  test_database.py  test_models.py  test_news_checker.py  test_notifier.py  test_routes.py  test_scraper.py
